--- a/demo/demo.html
+++ b/demo/demo.html
@@ -686,12 +686,14 @@
 <script src="https://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
 <script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="http://148.70.186.168/ajax.js" type="text/javascript"></script>
+<!--<script src="./js/ajax-1.0.0.js" type="text/javascript"></script>-->
 <script type="text/javascript">
     $(function(){
         if($(window).height()<700){
             $(".nav").addClass("roll");
         }
     })
+    jQuery.support.cors=true;
     //url接口地址
     var commonUrl="http://127.0.0.1:11200";
     function copy(e){
@@ -821,13 +823,31 @@
         var data={
             certType:$("#certType").val(),
             containerId:$("#containerId3").val()
-        }
+        };
         ajax(url, data,function(res) {
             console.log(res)
             var msg=JSON.stringify(res,null,3);
             document.getElementById("GetCertBase64StringTxt").innerHTML = msg;
             document.getElementById("GetCertBase64StringData").value = res.data.certBase64;
         });
+//        li.ajax({
+//            url:url,
+//            type:"post",
+//            data:data,
+//            before:function(){
+//                console.log("我发送请求了");
+//            },
+//            error:function(xhr){
+//                console.log("err xhr",xhr);
+//            },
+//            success:function(res){
+//                console.log(res);
+//                var msg=JSON.stringify(res,null,3);
+//                document.getElementById("GetCertBase64StringTxt").innerHTML = msg;
+//                document.getElementById("GetCertBase64StringData").value = res.data.certBase64;
+//            }
+//
+//        })
     }
     //3.2.2.3.获取证书信息接口
     function GetCertInfo(){
@@ -962,7 +982,6 @@
             document.getElementById("KeyEncryptDataTxt").innerHTML = msg;
             document.getElementById("KeyEncryptDataData").value = res.data.encRsKey;
         });
-
     }
     //3.2.2.15.非对称解密接口
     function KeyDecryptData(){
@@ -979,165 +998,118 @@
     }
     //3.2.2.16.数字信封加密接口
     function KeyEncryptByDigitalEnvelope(){
-        $.ajax({
-            url:commonUrl+"/RS_KeyEncryptByDigitalEnvelope",
-            type:"post",
-            data:{
-                souceFilePath:$("#souceFilePath").val(),
-                encFilePath:$("#encFilePath").val(),
-                certBase64:$("#certBase2").val()
-            },
-            success:function(res){
-
-                document.getElementById("KeyEncryptTxt").innerHTML = res;
-                console.log(res);
-            },
-            error:function(res){
-                console.log(res);
-            }
+        var url=commonUrl+"/RS_KeyEncryptByDigitalEnvelope";
+        var data={
+            souceFilePath:$("#souceFilePath").val(),
+            encFilePath:$("#encFilePath").val(),
+            certBase64:$("#certBase2").val()
+        }
+        ajax(url, data,function(res) {
+            console.log(res)
+            var msg=JSON.stringify(res,null,3);
+            document.getElementById("KeyEncryptTxt").innerHTML = msg;
         });
     }
     //3.2.2.17.数字信封解密接口
     function KeyDecryptByDigitalEnvelope(){
-        $.ajax({
-            url:commonUrl+"/RS_KeyDecryptByDigitalEnvelope",
-            type:"post",
-            data:{
-                containerId:$("#containerId7").val(),
-                encFilePath:$("#encFilePath2").val(),
-                dncDirectory:$("#dncDirectory").val(),
-                encRsKeyPath:$("#encRsKeyPath").val()
-            },
-            success:function(res){
-
-                document.getElementById("KeyDecryptByDigitalTxt").innerHTML = res;
-                console.log(res);
-            },
-            error:function(res){
-                console.log(res);
-            }
+        var url=commonUrl+"/RS_KeyDecryptByDigitalEnvelope";
+        var data={
+            containerId:$("#containerId7").val(),
+            encFilePath:$("#encFilePath2").val(),
+            dncDirectory:$("#dncDirectory").val(),
+            encRsKeyPath:$("#encRsKeyPath").val()
+        }
+        ajax(url, data,function(res) {
+            console.log(res)
+            var msg=JSON.stringify(res,null,3);
+            document.getElementById("KeyDecryptByDigitalTxt").innerHTML = msg;
         });
     }
 
 
     //3.2.2.9.P1签名接口（域签）
     function KeyDigitalSignByP1(){
-        $.ajax({
-            url:commonUrl+"/RS_KeyDigitalSignByP1",
-            type:"post",
-            data:{
-                asn1Msg:$("#asn1Msg").val(),
-                containerId:$("#containerId5").val()
-            },
-            success:function(res){
-
-                document.getElementById("KeyDigitalSignByP1Txt").innerHTML = res;
-                console.log(res);
-            },
-            error:function(res){
-                console.log(res);
-            }
+        var url=commonUrl+"/RS_KeyDigitalSignByP1";
+        var data={
+            asn1Msg:$("#asn1Msg").val(),
+            containerId:$("#containerId5").val()
+        }
+        ajax(url, data,function(res) {
+            console.log(res)
+            var msg=JSON.stringify(res,null,3);
+            document.getElementById("KeyDigitalSignByP1Txt").innerHTML = msg;
         });
     }
     //3.2.2.10.P1验签接口（域签）
     function VerifyDigitalSignByP1(){
-        $.ajax({
-            url:commonUrl+"/RS_VerifyDigitalSignByP1",
-            type:"post",
-            data:{
-                certBase64:$("#VerifycertBase64").val(),
-                asn1Msg:$("#asn1Msg2").val(),
-                signdMsg:$("#signdMsg").val(),
-            },
-            success:function(res){
-
-                document.getElementById("VerifyDigitalSignByP1Txt").innerHTML = res;
-                console.log(res);
-            },
-            error:function(res){
-                console.log(res);
-            }
+        var url=commonUrl+"/RS_VerifyDigitalSignByP1";
+        var data={
+            certBase64:$("#VerifycertBase64").val(),
+            asn1Msg:$("#asn1Msg2").val(),
+            signdMsg:$("#signdMsg").val(),
+        }
+        ajax(url, data,function(res) {
+            console.log(res)
+            var msg=JSON.stringify(res,null,3);
+            document.getElementById("VerifyDigitalSignByP1Txt").innerHTML = msg;
         });
+
     }
     //3.2.2.11.P1签名接口
     function KeySignByP1(){
-        $.ajax({
-            url:commonUrl+"/RS_KeySignByP1",
-            type:"post",
-            data:{
-                msg:$("#msg").val(),
-                containerId:$("#KeycontainerId").val(),
-            },
-            success:function(res){
-                var msg=JSON.parse(res);
-                document.getElementById("KeySignByP1Txt").innerHTML = res;
-                document.getElementById("KeySignByP1Data").value = msg.data.signdMsg;
-                console.log(res);
-            },
-            error:function(res){
-                console.log(res);
-            }
+        var url=commonUrl+"/RS_KeySignByP1";
+        var data={
+            asn1Msg:$("#msg").val(),
+            containerId:$("#KeycontainerId").val(),
+        }
+        ajax(url, data,function(res) {
+            console.log(res)
+            var msg=JSON.stringify(res,null,3);
+            document.getElementById("KeySignByP1Txt").innerHTML = msg;
+            document.getElementById("KeySignByP1Data").value = res.data.signdMsg;
         });
     }
     //3.2.2.12.P1验签接口
     function VerifySignByP1(){
-        $.ajax({
-            url:commonUrl+"/RS_VerifySignByP1 ",
-            type:"post",
-            data:{
-                certBase64:$("#SigncertBase").val(),
-                msg:$("#asn1Msg3").val(),
-                signdMsg:$("#signdMsg2").val(),
-            },
-            success:function(res){
-
-                document.getElementById("VerifySignByP1Txt").innerHTML = res;
-                console.log(res);
-            },
-            error:function(res){
-                console.log(res);
-            }
+        var url=commonUrl+"/RS_VerifySignByP1";
+        var data={
+            certBase64:$("#SigncertBase").val(),
+            msg:$("#asn1Msg3").val(),
+            signdMsg:$("#signdMsg2").val(),
+        }
+        ajax(url, data,function(res) {
+            console.log(res)
+            var msg=JSON.stringify(res,null,3);
+            document.getElementById("VerifySignByP1Txt").innerHTML = msg;
         });
     }
     //3.2.2.13.P7签名接口
     function KeySignByP7(){
-        $.ajax({
-            url:commonUrl+"/RS_KeySignByP7",
-            type:"post",
-            data:{
-                msg:$("#msg2").val(),
-                flag:$("#flag").val(),
-                containerId:$("#P7containerId").val(),
-            },
-            success:function(res){
-                var msg=JSON.parse(res);
-                document.getElementById("KeySignByP7Txt").innerHTML = res;
-                document.getElementById("KeySignByP7Data").value = msg.data.signdMsg;
-                console.log(res);
-            },
-            error:function(res){
-                console.log(res);
-            }
+        var url=commonUrl+"/RS_KeySignByP7";
+        var data={
+            msg:$("#msg2").val(),
+            flag:$("#flag").val(),
+            containerId:$("#P7containerId").val(),
+        }
+        ajax(url, data,function(res) {
+            console.log(res)
+            var msg=JSON.stringify(res,null,3);
+            document.getElementById("KeySignByP7Txt").innerHTML = msg;
+            document.getElementById("KeySignByP7Data").value = res.data.signdMsg;
         });
     }
     //3.2.1.3.P7验签接口
     function VerifySignByP7(){
-        $.ajax({
-            url:commonUrl+"/RS_VerifySignByP7",
-            type:"post",
-            data:{
-                msg:$("#signed").val(),
-                signdMsg:$("#sign").val(),
-                flag:$("#Identification").val()
-            },
-            success:function(res){
-
-                document.getElementById("VerifySignByP7Txt").innerHTML = res;
-                console.log(res);
-            },
-            error:function(res){
-                console.log(res);
-            }
+        var url=commonUrl+"/RS_VerifySignByP7";
+        var data={
+            msg:$("#signed").val(),
+            signdMsg:$("#sign").val(),
+            flag:$("#Identification").val()
+        }
+        ajax(url, data,function(res) {
+            console.log(res)
+            var msg=JSON.stringify(res,null,3);
+            document.getElementById("VerifySignByP7Txt").innerHTML = msg;
         });
     }
 </script>
